argo/ataka/templates/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../apps/ataka/docker-compose.yml -c --generate-network-policies
    kompose.service.type: clusterip
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../apps/ataka/docker-compose.yml -c --generate-network-policies
        kompose.service.type: clusterip
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.network/ataka-ataka: "true"
        io.kompose.service: api
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: ghcr.io/tonitert/ad-infra-k3s/ataka-api:latest
          name: api
          ports:
            - containerPort: 8000
              protocol: TCP
          securityContext:
            runAsGroup: 966
            runAsUser: 1000
          volumeMounts:
            - mountPath: /data/shared
              name: shared
            - mountPath: /data/exploits
              name: exploits
      hostname: ataka-api
      restartPolicy: Always
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: shared
        - name: exploits
          persistentVolumeClaim:
            claimName: exploits
