argo/ataka/templates/cli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../apps/ataka/docker-compose.yml -c --generate-network-policies
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: cli
  name: cli
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cli
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../apps/ataka/docker-compose.yml -c --generate-network-policies
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.network/ataka-ataka: "true"
        io.kompose.service: cli
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: ghcr.io/tonitert/ad-infra-k3s/ataka-cli:latest
          name: cli
          securityContext:
            runAsGroup: 966
            runAsUser: 1000
      hostname: ataka-cli
      restartPolicy: Always
