argo/ataka/templates/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../apps/ataka/docker-compose.yml -c --generate-network-policies
    kompose.service.type: clusterip
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../apps/ataka/docker-compose.yml -c --generate-network-policies
        kompose.service.type: clusterip
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.network/ataka-ataka: "true"
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: ataka-env-secret
                  key: POSTGRES_PASSWORD
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: ataka-env-secret
                  key: POSTGRES_USER
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
          image: postgres:14-alpine
          name: postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      hostname: ataka-postgres
      restartPolicy: Always
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
