argo/ataka/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../apps/ataka/docker-compose.yml -c --generate-network-policies
    kompose.service.type: clusterip
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: api
  type: ClusterIP
