argo/ataka/templates/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../apps/ataka/docker-compose.yml -c --generate-network-policies
    kompose.service.type: clusterip
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  ports:
    - name: "15672"
      port: 15672
      targetPort: 15672
    - name: "5672"
      port: 5672
      targetPort: 5672
  selector:
    io.kompose.service: rabbitmq
  type: ClusterIP
