argo/ataka/templates/ataka-ataka-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ataka-ataka
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ataka-ataka: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ataka-ataka: "true"
